--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 <body>
   <div class="overlay"></div>
 
-  <h1>🎄 Calendario dell'Avvento 🎄</h1>
+  <h1>🎄Il nostro Calendario dell'Avvento 🎄</h1>
 
   <div class="grid" id="calendar" aria-label="Calendario dell'Avvento"></div>
 
