--- a/index.html
+++ b/index.html
@@ -226,6 +226,26 @@
 
   closeBtn.addEventListener('click', () => modal.style.display = 'none');
   modal.addEventListener('click', (e) => { if (e.target === modal) modal.style.display = 'none'; });
+
+// EFFETTO NEVE
+  function createSnow() {
+    const snowflake = document.createElement('div');
+    snowflake.className = 'snowflake';
+    snowflake.textContent = '❄';
+    snowflake.style.left = Math.random() * 100 + 'vw';
+    snowflake.style.fontSize = (Math.random() * 20 + 8) + 'px';
+    snowflake.style.animationDuration = (Math.random() * 8 + 6) + 's';
+    snowflake.style.opacity = (Math.random() * 0.6 + 0.4);
+
+    document.body.appendChild(snowflake);
+
+    setTimeout(() => {
+      snowflake.remove();
+    }, 16000);
+  }
+
+  setInterval(createSnow, 300);
+   
 </script>
 
 </body>
