--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     1:  { img: "img/1.jpg",  text: "Testo personalizzato per il giorno 1" },
     2:  { img: "img/2.jpg",  text: "Testo per il giorno 2" },
     3:  { img: "img/3.jpg",  text: "Frase speciale del giorno 3" },
-    4:  { img: "img/4.jpg",  text: "Testo giorno 4" },
+    4:  { img: "img/4.jpg",  text: "Testo giorno 4 molto lungo lunghissimo che parla di tante cose forse dovevo farlo piu corto chi lo sa. Ma tanto è solo una prova vediamo come esce" },
     5:  { img: "img/5.jpg",  text: "Testo giorno 5" },
     6:  { img: "img/6.jpg",  text: "Testo giorno 6" },
     7:  { img: "img/7.jpg",  text: "Testo giorno 7" },
